[gd_scene load_steps=11 format=2]

[ext_resource path="res://gfx/konami_titel.png" type="Texture" id=1]
[ext_resource path="res://audio/Mehdi.wav" type="AudioStream" id=2]
[ext_resource path="res://Titel.gd" type="Script" id=3]
[ext_resource path="res://gfx/arrow_panel.png" type="Texture" id=4]
[ext_resource path="res://gfx/grey_light_panel.png" type="Texture" id=5]
[ext_resource path="res://audio/fxs/unlock.wav" type="AudioStream" id=6]
[ext_resource path="res://gfx/pink_light_panel.png" type="Texture" id=7]
[ext_resource path="res://audio/fxs/take_arrow.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
resource_name = "TextEaseIn"
length = 17.0
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.4, 0, 3.9, 6.1, 8.4, 10.1, 11.4, 12.3, 13.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.488, 0.488, 0.721, 0.721, 0.939, 0.939, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Code:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 12.8, 14.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 14.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("continue:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 14.5, 16.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 15.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "setAllowContinue"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "instructions2"
length = 20.0
tracks/0/type = "value"
tracks/0/path = NodePath("Code2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("grey:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6.1, 6.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pink:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 10.1, 10.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("TakeArrow")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 6.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("PinkBlock")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 10.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RichTextLabel2:visible_characters")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 2.1, 3.8, 5.5, 7, 9.3, 11.4, 13.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 50, 50, 88, 88, 177, 177, 233 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("play:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 15.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Titel" type="Node2D"]
script = ExtResource( 3 )

[node name="Titel" type="Sprite" parent="."]
position = Vector2( 391.188, 152.606 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="TitelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="instructions1" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="instructions1"]
autoplay = "TextEaseIn"
anims/TextEaseIn = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="instructions1"]
margin_left = 224.783
margin_top = 229.286
margin_right = 624.779
margin_bottom = 429.287
visible_characters = 0
percent_visible = 0.0
text = "The Konami Code is and old school cheat code that 
appears in many  video games.  

Since I know you would never cheat... I assume you
haven't seen it before. 

Here it is:
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Code" type="Sprite" parent="instructions1"]
visible = false
position = Vector2( 386.774, 371.945 )
texture = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="instructions1"]
stream = ExtResource( 6 )

[node name="continue" type="RichTextLabel" parent="instructions1"]
visible = false
margin_left = 325.751
margin_top = 411.647
margin_right = 475.751
margin_bottom = 441.647
text = "[ SPACE ] continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions2" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Instructions2"]
anims/instructions2 = SubResource( 2 )

[node name="RichTextLabel2" type="RichTextLabel" parent="Instructions2"]
margin_left = 224.783
margin_top = 229.286
margin_right = 624.783
margin_bottom = 469.286
visible_characters = 0
percent_visible = 0.0
text = "Find the whole code sequence and you win the game.





When you find a key it will turn grey.

Grey keys can be activated by pressing the key at the keyboard. An activated key is pink.

Some active key combinations will trigger cheats."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grey" type="Sprite" parent="Instructions2"]
visible = false
position = Vector2( 331.582, 274.733 )
z_index = -2
z_as_relative = false
texture = ExtResource( 5 )

[node name="pink" type="Sprite" parent="Instructions2"]
visible = false
position = Vector2( 332.25, 275.385 )
z_index = -1
texture = ExtResource( 7 )

[node name="Code2" type="Sprite" parent="Instructions2"]
show_behind_parent = true
position = Vector2( 393.484, 275.67 )
texture = ExtResource( 4 )

[node name="TakeArrow" type="AudioStreamPlayer" parent="Instructions2"]
stream = ExtResource( 8 )

[node name="PinkBlock" type="AudioStreamPlayer" parent="Instructions2"]
stream = ExtResource( 6 )

[node name="play" type="RichTextLabel" parent="Instructions2"]
visible = false
margin_left = 338.52
margin_top = 430.099
margin_right = 438.52
margin_bottom = 460.099
text = "[ P ] to play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bypass" type="RichTextLabel" parent="."]
margin_left = 27.5583
margin_top = 568.008
margin_right = 327.558
margin_bottom = 608.008
custom_colors/default_color = Color( 0.584314, 0.584314, 0.584314, 1 )
text = "[ P ] I know the drill, take me to the game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="RichTextLabel" parent="."]
margin_left = 691.437
margin_top = 567.966
margin_right = 991.437
margin_bottom = 667.966
custom_colors/default_color = Color( 0.584314, 0.584314, 0.584314, 1 )
text = "[ C ] Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credit3" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditText" type="RichTextLabel" parent="Credit3"]
margin_left = 229.097
margin_top = 228.939
margin_right = 629.097
margin_bottom = 528.938
text = "Code: 
Therese trito Andersson

Graphics:
Loke Andersson, 9 years old
Therese trito Andersson

Music:
Titel music custom made by Mehdi Forozandeh 
https://soundcloud.com/meganeh/

Free assets:
In game music by ChilledMindscapes
https://chillmindscapes.itch.io

Some graphic remakes from VEXED Retro Lines https://v3x3d.itch.io/retro-lines"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
